{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 306,
  "lineage": "576da234-803a-edfc-8736-102ce0417355",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c2b75e0b8815555b",
            "arn": "arn:aws:ec2:eu-west-1:183631301567:elastic-ip/eipalloc-0c2b75e0b8815555b",
            "association_id": "eipassoc-049f470ecf1535f31",
            "domain": "vpc",
            "id": "eipalloc-0c2b75e0b8815555b",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0c806d44d3bd787db",
            "private_dns": "ip-10-0-0-8.eu-west-1.compute.internal",
            "private_ip": "10.0.0.8",
            "public_dns": "ec2-54-171-66-229.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.171.66.229",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:183631301567:internet-gateway/igw-0fe79c239a3115428",
            "id": "igw-0fe79c239a3115428",
            "owner_id": "183631301567",
            "vpc_id": "vpc-08e361d69fd5dd418"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:183631301567:loadbalancer/app/app-alb/6f79ff5c7766a1cd",
            "arn_suffix": "app/app-alb/6f79ff5c7766a1cd",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-alb-1851802764.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:183631301567:loadbalancer/app/app-alb/6f79ff5c7766a1cd",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0dc9ff8571e1c0a97"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-030548a9afba25eee"
              },
              {
                "subnet_id": "subnet-03c8ac9f1975b7d7b"
              }
            ],
            "subnets": [
              "subnet-030548a9afba25eee",
              "subnet-03c8ac9f1975b7d7b"
            ],
            "vpc_id": "vpc-08e361d69fd5dd418",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:183631301567:listener/app/app-alb/6f79ff5c7766a1cd/7ba8947003e6fa6c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Not Found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:183631301567:listener/app/app-alb/6f79ff5c7766a1cd/7ba8947003e6fa6c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:183631301567:loadbalancer/app/app-alb/6f79ff5c7766a1cd",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app_alb",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "backend_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:183631301567:targetgroup/backend-tg/d9adda393af192fd",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:183631301567:listener-rule/app/app-alb/6f79ff5c7766a1cd/7ba8947003e6fa6c/8cfe0e93d623351e",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:183631301567:listener-rule/app/app-alb/6f79ff5c7766a1cd/7ba8947003e6fa6c/8cfe0e93d623351e",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:183631301567:listener/app/app-alb/6f79ff5c7766a1cd/7ba8947003e6fa6c",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app_alb",
            "aws_lb_listener.http",
            "aws_lb_target_group.backend_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "frontend_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:183631301567:targetgroup/frontend-tg/d2630994df65aa91",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:183631301567:listener-rule/app/app-alb/6f79ff5c7766a1cd/7ba8947003e6fa6c/a55b6726e64b7a6a",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:183631301567:listener-rule/app/app-alb/6f79ff5c7766a1cd/7ba8947003e6fa6c/a55b6726e64b7a6a",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:183631301567:listener/app/app-alb/6f79ff5c7766a1cd/7ba8947003e6fa6c",
            "priority": 200,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app_alb",
            "aws_lb_listener.http",
            "aws_lb_target_group.frontend_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:183631301567:targetgroup/backend-tg/d9adda393af192fd",
            "arn_suffix": "targetgroup/backend-tg/d9adda393af192fd",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-299",
                "path": "/api/v1/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:183631301567:targetgroup/backend-tg/d9adda393af192fd",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-1:183631301567:loadbalancer/app/app-alb/6f79ff5c7766a1cd"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "backend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-08e361d69fd5dd418"
          },
          "dependencies": [
            "aws_lb.app_alb",
            "aws_lb_listener.http",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:183631301567:targetgroup/frontend-tg/d2630994df65aa91",
            "arn_suffix": "targetgroup/frontend-tg/d2630994df65aa91",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-299",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:183631301567:targetgroup/frontend-tg/d2630994df65aa91",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-1:183631301567:loadbalancer/app/app-alb/6f79ff5c7766a1cd"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "frontend-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-08e361d69fd5dd418"
          },
          "dependencies": [
            "aws_lb.app_alb",
            "aws_lb_listener.http",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c2b75e0b8815555b",
            "association_id": "eipassoc-049f470ecf1535f31",
            "connectivity_type": "public",
            "id": "nat-0b5631667fafe7772",
            "network_interface_id": "eni-0c806d44d3bd787db",
            "private_ip": "10.0.0.8",
            "public_ip": "54.171.66.229",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03c8ac9f1975b7d7b"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07761d1dade3002bd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b5631667fafe7772",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07761d1dade3002bd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fe79c239a3115428",
            "id": "r-rtb-04fd423fbdc1a91d51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04fd423fbdc1a91d5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_rt",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:183631301567:route-table/rtb-07761d1dade3002bd",
            "id": "rtb-07761d1dade3002bd",
            "owner_id": "183631301567",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b5631667fafe7772",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08e361d69fd5dd418"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:183631301567:route-table/rtb-04fd423fbdc1a91d5",
            "id": "rtb-04fd423fbdc1a91d5",
            "owner_id": "183631301567",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fe79c239a3115428",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08e361d69fd5dd418"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a4f5db10c7eab30",
            "route_table_id": "rtb-07761d1dade3002bd",
            "subnet_id": "subnet-07a84858ed4ae4e87"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0360633469515f334",
            "route_table_id": "rtb-07761d1dade3002bd",
            "subnet_id": "subnet-06b547b2902e96bd8"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a19708f7bd850024",
            "route_table_id": "rtb-04fd423fbdc1a91d5",
            "subnet_id": "subnet-03c8ac9f1975b7d7b"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac7aab3f0a8a7215",
            "route_table_id": "rtb-04fd423fbdc1a91d5",
            "subnet_id": "subnet-030548a9afba25eee"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:183631301567:security-group/sg-0dc9ff8571e1c0a97",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc9ff8571e1c0a97",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-2025033117491526380000000a",
            "name_prefix": "terraform-",
            "owner_id": "183631301567",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08e361d69fd5dd418"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:183631301567:security-group/sg-08e977673f0f367fb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08e977673f0f367fb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dc9ff8571e1c0a97"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dc9ff8571e1c0a97"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-2025033117491946230000000d",
            "name_prefix": "terraform-",
            "owner_id": "183631301567",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08e361d69fd5dd418"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_proxy_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:183631301567:security-group/sg-07328d68fd3a20dac",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07328d68fd3a20dac",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08e977673f0f367fb"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20250331174915261800000009",
            "name_prefix": "terraform-",
            "owner_id": "183631301567",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08e361d69fd5dd418"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:183631301567:security-group/sg-008c5551150e1e295",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-008c5551150e1e295",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07328d68fd3a20dac"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-2025033117491883060000000c",
            "name_prefix": "terraform-",
            "owner_id": "183631301567",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08e361d69fd5dd418"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rds_proxy_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_to_rds_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-1646894365",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07328d68fd3a20dac",
            "security_group_rule_id": "sgr-0520727d4ec5ec589",
            "self": false,
            "source_security_group_id": "sg-08e977673f0f367fb",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_sg",
            "aws_security_group.rds_proxy_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:183631301567:subnet/subnet-07a84858ed4ae4e87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a84858ed4ae4e87",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "183631301567",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-08e361d69fd5dd418"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:183631301567:subnet/subnet-06b547b2902e96bd8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b547b2902e96bd8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "183631301567",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-08e361d69fd5dd418"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:183631301567:subnet/subnet-03c8ac9f1975b7d7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c8ac9f1975b7d7b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "183631301567",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-08e361d69fd5dd418"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:183631301567:subnet/subnet-030548a9afba25eee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030548a9afba25eee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "183631301567",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-08e361d69fd5dd418"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:183631301567:vpc/vpc-08e361d69fd5dd418",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-036ac61d3b1cac00b",
            "default_route_table_id": "rtb-0aa2481ab48c82d63",
            "default_security_group_id": "sg-00faaf424f2fe818b",
            "dhcp_options_id": "dopt-09dab367c7cebba84",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08e361d69fd5dd418",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aa2481ab48c82d63",
            "owner_id": "183631301567"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:183631301567:vpc-endpoint/vpce-0503bf8e3e210bc1c",
            "dns_entry": [
              {
                "dns_name": "vpce-0503bf8e3e210bc1c-huvgv73d.dkr.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0503bf8e3e210bc1c-huvgv73d-eu-west-1a.dkr.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0503bf8e3e210bc1c-huvgv73d-eu-west-1b.dkr.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0503bf8e3e210bc1c",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03a4174925b76b98a",
              "eni-0e9c39fa77dec925c"
            ],
            "owner_id": "183631301567",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-08e977673f0f367fb"
            ],
            "service_name": "com.amazonaws.eu-west-1.ecr.dkr",
            "service_region": "eu-west-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.239",
                "subnet_id": "subnet-07a84858ed4ae4e87"
              },
              {
                "ipv4": "10.0.3.27",
                "subnet_id": "subnet-06b547b2902e96bd8"
              }
            ],
            "subnet_ids": [
              "subnet-06b547b2902e96bd8",
              "subnet-07a84858ed4ae4e87"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-08e361d69fd5dd418"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_sg",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:183631301567:vpc-endpoint/vpce-0b60c18ebd5b679c4",
            "dns_entry": [
              {
                "dns_name": "vpce-0b60c18ebd5b679c4-mvp9cn7c.dkr.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0b60c18ebd5b679c4-mvp9cn7c-eu-west-1a.dkr.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0b60c18ebd5b679c4-mvp9cn7c-eu-west-1b.dkr.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b60c18ebd5b679c4",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00952f155883f4057",
              "eni-0beda7083e3070adb"
            ],
            "owner_id": "183631301567",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-08e977673f0f367fb"
            ],
            "service_name": "com.amazonaws.eu-west-1.ecr.dkr",
            "service_region": "eu-west-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.147",
                "subnet_id": "subnet-07a84858ed4ae4e87"
              },
              {
                "ipv4": "10.0.3.86",
                "subnet_id": "subnet-06b547b2902e96bd8"
              }
            ],
            "subnet_ids": [
              "subnet-06b547b2902e96bd8",
              "subnet-07a84858ed4ae4e87"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-08e361d69fd5dd418"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_sg",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:183631301567:vpc-endpoint/vpce-0693caab12fb8e62e",
            "dns_entry": [
              {
                "dns_name": "vpce-0693caab12fb8e62e-s480gl3e.secretsmanager.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0693caab12fb8e62e-s480gl3e-eu-west-1a.secretsmanager.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0693caab12fb8e62e-s480gl3e-eu-west-1b.secretsmanager.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0693caab12fb8e62e",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-09c4acad3b3dab8e4",
              "eni-0b066c0d8909ae1b2"
            ],
            "owner_id": "183631301567",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-08e977673f0f367fb"
            ],
            "service_name": "com.amazonaws.eu-west-1.secretsmanager",
            "service_region": "eu-west-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.242",
                "subnet_id": "subnet-07a84858ed4ae4e87"
              },
              {
                "ipv4": "10.0.3.235",
                "subnet_id": "subnet-06b547b2902e96bd8"
              }
            ],
            "subnet_ids": [
              "subnet-06b547b2902e96bd8",
              "subnet-07a84858ed4ae4e87"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-08e361d69fd5dd418"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_sg",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}